# Qudit-Clifford-Synthesis

./: .gitignore  README.md  pyproject.toml
examples/: EvaluateModel.py  Train.py  TuneHyp.py
src/qudit_clifford_synthesis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qudit_clifford_synthesis/CliffSyn/: CNN.py  Curriculum.py  Environment.py  HyperParam.py
src/qudit_clifford_synthesis/Essentials/: CliffGates.py  Gates.py  QuditCirc.py
src/qudit_clifford_synthesis/Evaluation/: LEAP.py  MainEvaluation.py  QSD (WIP).py  SB3.py  SK (WIP).py
