# pyproject.toml

[project]
name = "qudit-clifford-synthesis"
version = "0.1.0"
description = "Creating a reinforcement learning model for qudit Clifford synthesis."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
]
dependencies = [
  "bqskit==1.2.0",
  "gymnasium==1.1.1",
  "matplotlib==3.10.3",
  "numpy==2.3.0",
  "optuna==4.3.0",
  "scipy==1.15.3",
  "stable_baselines3==2.6.0",
  "sympy==1.14.0",
  "torch==2.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]